--- a/contact.html
+++ b/contact.html
@@ -312,9 +312,10 @@
             text-align: center;
             padding: 40px 20px;
 
-            /* margin-bottom: 40px; */
+            /* margin-bottom: 40px;
+             box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); */
             border-radius: 8px;
-            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+           
 
         }
 
