--- a/about.html
+++ b/about.html
@@ -198,7 +198,7 @@
             max-width: 1200px;
             background: #f4cda5;
             border-radius: 12px;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+          /*  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1); */
             flex-wrap: wrap;
         }
 
