--- a/contact.html
+++ b/contact.html
@@ -276,7 +276,7 @@
             /* padding: 10px; */
             font-size: 1rem;
             bottom: 0;
-            position: fixed;
+
             text-align: center;
             width: 100%;
         }
@@ -312,17 +312,16 @@
             text-align: center;
             padding: 40px 20px;
 
-            /* margin-bottom: 40px;
-             box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); */
+            /* margin-bottom: 40px; */
             border-radius: 8px;
-           
+            /* box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); */
 
         }
 
         @media (max-width: 48em) {
             main#home .contact {
 
-                width: 100%;
+                width: 75%;
 
             }
         }
@@ -338,6 +337,9 @@
             font-size: 1.2rem;
             color: #333;
             margin-bottom: 20px;
+            letter-spacing: 3px;
+            font-weight: 300;
+            line-height: 1.2;
         }
 
         main#home .contact .btn-contact {
@@ -410,8 +412,8 @@
                 target="_blank" rel="nofollow" class="btn-contact">Get In Touch</a>
 
             <div class="more-info">
-                <h3>More</h3>
-                <p>Phone Number: <a href="tel:+64278755175">+64 27 875 5175</a></p>
+                <h2>More</h2>
+                <p>WhatApp: <a href="tel:+64278755175">+64 27 875 5175</a></p>
                 <p>Email: <a href="mailto:casadakarina.nz@gmail.com">casadakarina.nz@gmail.com</a></p>
                 <p>Instagram: <a href="https://www.instagram.com/karina_piha" target="_blank">@karina_piha</a></p>
             </div>
