--- a/contact.html
+++ b/contact.html
@@ -405,8 +405,7 @@
 
             <h2>Contact Me</h2>
 
-            <p>If you have any questions, suggestions, feedback, or partnership opportunities, feel free to reach out!
-            </p>
+            <p>Contact us for more information.</p>
 
             <a href="https://api.whatsapp.com/send?phone=+64278755175&amp;text=Hello%21%0AI+came+from+your+website.%0A%0A"
                 target="_blank" rel="nofollow" class="btn-contact">Get In Touch</a>
