--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                     <a href="./art.html">
                         <img src="4.jpg" alt="I told you so">
                         <h3>"I Told You So"</h3>
-                        <p>Prints available (original disappeared)</p>
+                      <p>Available</p>
                     </a>
                 </div>
 
