--- a/contact.html
+++ b/contact.html
@@ -30,12 +30,15 @@
         /* https://codepen.io/mutedblues/pen/MmPNPG */
 
         .header {
-            /*background-color: #f4cda5;*/
+            /*
+            background-color: #f4cda5;
+            position: fixed;
+            */
             background: #f4cda5;
 
             width: 100%;
             z-index: 3;
-            position: fixed;
+            
         }
 
         .header ul {
