--- a/index.html
+++ b/index.html
@@ -551,8 +551,8 @@
 
                 <div class="artwork">
                     <a href="./art_24.html">
-                        <img src="24.jpg" alt="Putin">
-                        <h3>"Putin"</h3>
+                        <img src="24.jpg" alt="Koala">
+                        <h3>"Koala"</h3>
                         <p>NZ$1800</p>
                     </a>
                 </div>
