--- a/art_24.html
+++ b/art_24.html
@@ -363,7 +363,7 @@
 
         <!-- Details Section -->
         <div class="details">
-            <h2>"Putin"</h2>
+            <h2>"Koala"</h2>
 
             <p>—</p>
             <p>For more details or inquiries, please contact the artist directly.</p>
