refactor images and paths

--- a/index.html
+++ b/index.html
@@ -362,8 +362,8 @@
         <section id="arts" class="art">
             <div class="gallery">
                 <div class="artwork">
-                    <a href="./art_1.html">
-                        <img src="1.jpg" alt="Stop?">
+                    <a href="./art_pages/art_1.html">
+                        <img src="./images/1.jpg" alt="Stop?">
                         <h3>"Stop?"</h3>
                         <p>Available</p>
                     </a>
@@ -371,8 +371,8 @@
 
 
                 <div class="artwork">
-                    <a href="./art_2.html">
-                        <img src="2.jpg" alt="Flores à Iemanjá">
+                    <a href="./art_pages/art_2.html">
+                        <img src="./images/2.jpg" alt="Flores à Iemanjá">
                         <h3>"Flores à Iemanjá"</h3>
                         <p>Available</p>
                     </a>
@@ -380,114 +380,114 @@
 
 
                 <div class="artwork">
-                    <a href="./art_3.html">
-                        <img src="3.jpg" alt="Summer Vibe">
+                    <a href="./art_pages/art_3.html">
+                        <img src="./images/3.jpg" alt="Summer Vibe">
                         <h3>"Summer Vibe"</h3>
                         <p>Available</p>
                     </a>
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_4.html">
-                        <img src="4.jpg" alt="I told you so">
+                    <a href="./art_pages/art_4.html">
+                        <img src="./images/4.jpg" alt="I told you so">
                         <h3>"I Told You So"</h3>
                         <p>Available</p>
                     </a>
                 </div>
                 <div class="artwork">
-                    <a href="./art_0.html">
-                        <img src="0.jpg" alt="Artwork">
+                    <a href="./art_pages/art_0.html">
+                        <img src="./images/0.jpg" alt="Artwork">
                         <h3>—</h3>
                         <p>Prints available (original disappeared)</p>
                     </a>
                 </div>
 
                 <div class="artwork sold">
-                    <a href="./art_5.html">
-                        <img src="5.jpg" alt="Artwork">
+                    <a href="./art_pages/art_5.html">
+                        <img src="./images/5.jpg" alt="Artwork">
 
 
                     </a>
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_6.html">
-                        <img src="6.jpg" alt="Artwork">
+                    <a href="./art_pages/art_6.html">
+                        <img src="./images/6.jpg" alt="Artwork">
                         <h3>"Pink Panther"</h3>
                         <p>NZ$560</p>
                     </a>
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_7.html">
-                        <img src="7.jpg" alt="Trust">
+                    <a href="./art_pages/art_7.html">
+                        <img src="./images/7.jpg" alt="Trust">
                         <h3>"Trust"</h3>
                         <p>NZ$1800</p>
                     </a>
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_8.html">
-                        <img src="8.jpg" alt="Strike">
+                    <a href="./art_pages/art_8.html">
+                        <img src="./images/8.jpg" alt="Strike">
                         <h3>"Strike"</h3>
                         <p>NZ$560</p>
                     </a>
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_9.html">
-                        <img src="9.jpg" alt="Let It Flow">
+                    <a href="./art_pages/art_9.html">
+                        <img src="./images/9.jpg" alt="Let It Flow">
                         <h3>"Let It Flow"</h3>
                         <p>NZ$5600</p>
                     </a>
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_10.html">
-                        <img src="10.jpg" alt="Flowers">
+                    <a href="./art_pages/art_10.html">
+                        <img src="./images/10.jpg" alt="Flowers">
                         <h3>"Flowers"</h3>
                         <p>NZ$560</p>
                     </a>
                 </div>
 
                 <div class="artwork sold">
-                    <a href="./art_11.html">
-                        <img src="11.jpg" alt="Monkey Mind">
+                    <a href="./art_pages/art_11.html">
+                        <img src="./images/11.jpg" alt="Monkey Mind">
 
                     </a>
                 </div>
 
                 <div class="artwork sold">
-                    <a href="./art_12.html">
-                        <img src="12.jpg" alt="Artwork">
+                    <a href="./art_pages/art_12.html">
+                        <img src="./images/12.jpg" alt="Artwork">
 
                     </a>
                 </div>
 
                 <div class="artwork sold">
-                    <a href="./art_13.html">
-                        <img src="13.jpg" alt="Artwork">
+                    <a href="./art_pages/art_13.html">
+                        <img src="./images/13.jpg" alt="Artwork">
 
                     </a>
                 </div>
 
                 <div class="artwork sold">
-                    <a href="./art_14.html">
-                        <img src="14.jpg" alt="Artwork">
+                    <a href="./art_pages/art_14.html">
+                        <img src="./images/14.jpg" alt="Artwork">
 
                     </a>
                 </div>
 
                 <div class="artwork sold">
-                    <a href="./art_15.html">
-                        <img src="15.jpg" alt="Artwork">
+                    <a href="./art_pages/art_15.html">
+                        <img src="./images/15.jpg" alt="Artwork">
 
                     </a>
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_16.html">
-                        <img src="16.jpg" alt="Sorveteiro">
+                    <a href="./art_pages/art_16.html">
+                        <img src="./images/16.jpg" alt="Sorveteiro">
                         <h3>"Sorveteiro"</h3>
                         <p>NZ$1800</p>
 
@@ -495,46 +495,46 @@
                 </div>
 
                 <div class="artwork sold">
-                    <a href="./art_17.html">
-                        <img src="17.jpg" alt="Artwork">
+                    <a href="./art_pages/art_17.html">
+                        <img src="./images/17.jpg" alt="Artwork">
 
                     </a>
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_18.html">
-                        <img src="18.jpg" alt="Spirit">
+                    <a href="./art_pages/art_18.html">
+                        <img src="./images/18.jpg" alt="Spirit">
                         <h3>"Spirit"</h3>
                         <p>NZ$560</p>
                     </a>
                 </div>
 
                 <div class="artwork sold">
-                    <a href="./art_19.html">
-                        <img src="19.jpg" alt="Artwork">
+                    <a href="./art_pages/art_19.html">
+                        <img src="./images/19.jpg" alt="Artwork">
 
                     </a>
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_20.html">
-                        <img src="20.jpg" alt="Window">
+                    <a href="./art_pages/art_20.html">
+                        <img src="./images/20.jpg" alt="Window">
                         <h3>"Window"</h3>
                         <p>NZ$360</p>
                     </a>
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_21.html">
-                        <img src="21.jpg" alt="Mens also cry">
+                    <a href="./art_pages/art_21.html">
+                        <img src="./images/21.jpg" alt="Mens also cry">
                         <h3>"Mens Also Cry"</h3>
                         <p>NZ$1800</p>
                     </a>
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_22.html">
-                        <img src="22.jpg" alt="Eric's Room">
+                    <a href="./art_pages/art_22.html">
+                        <img src="./images/22.jpg" alt="Eric's Room">
                         <h3>"Eric's Room"</h3>
                         <p>NZ$1800</p>
                     </a>
@@ -542,99 +542,99 @@
 
 
                 <div class="artwork">
-                    <a href="./art_23.html">
-                        <img src="23.jpg" alt="Dainty">
+                    <a href="./art_pages/art_23.html">
+                        <img src="./images/23.jpg" alt="Dainty">
                         <h3>"Dainty"</h3>
                         <p>NZ$1800</p>
                     </a>
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_24.html">
-                        <img src="24.jpg" alt="Koala">
+                    <a href="./art_pages/art_24.html">
+                        <img src="./images/24.jpg" alt="Koala">
                         <h3>"Koala"</h3>
                         <p>NZ$1800</p>
                     </a>
                 </div>
 
                 <div class="artwork sold">
-                    <a href="./art_25.html">
-                        <img src="25.jpg" alt="Artwork">
+                    <a href="./art_pages/art_25.html">
+                        <img src="./images/25.jpg" alt="Artwork">
 
                     </a>
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_26.html">
-                        <img src="26.jpg" alt="Justice">
+                    <a href="./art_pages/art_26.html">
+                        <img src="./images/26.jpg" alt="Justice">
                         <h3>"Justice"</h3>
                         <p>NZ$3600</p>
                     </a>
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_27.html">
-                        <img src="27.jpg" alt="Kate">
+                    <a href="./art_pages/art_27.html">
+                        <img src="./images/27.jpg" alt="Kate">
                         <h3>"Kate"</h3>
                         <p>NZ$180</p>
                     </a>
                 </div>
 
                 <div class="artwork sold">
-                    <a href="./art_28.html">
-                        <img src="28.jpg" alt="Artwork">
+                    <a href="./art_pages/art_28.html">
+                        <img src="./images/28.jpg" alt="Artwork">
 
                     </a>
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_29.html">
-                        <img src="29.jpg" alt="Jack Frost">
+                    <a href="./art_pages/art_29.html">
+                        <img src="./images/29.jpg" alt="Jack Frost">
                         <h3>"Jack Frost"</h3>
                         <p>NZ$10.800</p>
                     </a>
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_30.html">
-                        <img src="30.jpg" alt="Tamagochi">
+                    <a href="./art_pages/art_30.html">
+                        <img src="./images/30.jpg" alt="Tamagochi">
                         <h3>"Tamagochi"</h3>
                         <p>NZ$360</p>
                     </a>
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_31.html">
-                        <img src="31.jpg" alt="Surf">
+                    <a href="./art_pages/art_31.html">
+                        <img src="./images/31.jpg" alt="Surf">
                         <h3>"Surf"</h3>
                         <p>NZ$2400</p>
                     </a>
                 </div>
 
                 <div class="artwork sold">
-                    <a href="./art_32.html">
-                        <img src="32.jpg" alt="Artwork">
+                    <a href="./art_pages/art_32.html">
+                        <img src="./images/32.jpg" alt="Artwork">
 
                     </a>
                 </div>
 
                 <div class="artwork sold">
-                    <a href="./art_33.html">
-                        <img src="33.jpg" alt="Artwork">
+                    <a href="./art_pages/art_33.html">
+                        <img src="./images/33.jpg" alt="Artwork">
 
 
                     </a>
                 </div>
 
                 <div class="artwork sold">
-                    <a href="./art_34.html">
-                        <img src="34.jpg" alt="Self Protrait" />
+                    <a href="./art_pages/art_34.html">
+                        <img src="./images/34.jpg" alt="Self Protrait" />
 
                     </a>
                 </div>
                 <div class="artwork notforsale">
-                    <a href="./art_35.html">
-                        <img src="35.jpg" alt="Self Protrait">
+                    <a href="./art_pages/art_35.html">
+                        <img src="./images/35.jpg" alt="Self Protrait">
                         <h3>"Self Protrait" feat. Mauricio Benega</h3>
 
                     </a>
