refactor: add metatags

--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Karina Piha is a Brazilian artist living in New Zealand, with European and Arab roots. Her vibrant artwork blends cultures, influenced by her life in Germany and around the world. A multi-lingual artist, she also practices art therapy, teaches Yoga Nidra and Ashtanga, and is a popular Airbnb Superhost. Karina’s work has been sold to high-profile clients and she is dedicated to charity work.">
     <title>About Me</title>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;300;400&display=swap" rel="stylesheet">
 
@@ -198,7 +200,7 @@
             max-width: 1200px;
             background: #f4cda5;
             border-radius: 12px;
-          /*  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1); */
+            /*  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1); */
             flex-wrap: wrap;
         }
 
