--- a/exhibitions.html
+++ b/exhibitions.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Discover Karina Piha's art exhibitions around the world. From gallery shows to unique events, explore her vibrant, culture-infused artwork and find out where to see it next.">
+
     <title>Karina Piha - Artist</title>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;300;400&display=swap" rel="stylesheet">
     <style>
