--- a/art_pages/art_27.html
+++ b/art_pages/art_27.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Delve deeper into the vibrant world of Karina Piha's art. Each piece tells a story, reflecting a blend of cultures and deep emotional resonance. Learn about the inspirations behind her paintings and discover the available artworks for purchase.">
     <title>Artwork Details - Karina Piha</title>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;300;400&display=swap" rel="stylesheet">
     <style>
